--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ wandb==0.18.0
 weave==0.51.44
 wandb_workspaces
 slack-sdk>=3.21.3
-boto3>=1.28.0
+boto3
 python-dotenv>=1.0.0
 pytest>=7.4.0 
 slack_bolt
